# c-rt

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  main.c  makefile  readme.md
include/app/: app.h  app.hpp  bit_util.hpp  bitstream.hpp  error.h  error.hpp  huffman.h  huffman.hpp  image.h  image.hpp  macros.hpp
include/app/huffman/: bitstream.hpp
shaders/: fragshader.frag  shader.vert  vertshader.vert
src/: app.c  app.cpp  app_mesh.c  app_mesh.cpp  huffman.c  image.c  libjpeg_test.c  main.c  main_linux.c  main_macos.m  platform_macos.m
src/image/: gif.cpp  image_x64.c  image_ycbcr_to_rgb.c  jpeg.c  jpeg.cpp  png.c  png.cpp  webp.cpp
src/image/jpeg/: jpeg_arm64.c  jpeg_arm64.cpp  jpeg_x64.c  jpeg_x64.cpp  jpeg_ycbcr_to_rgb.c  jpeg_ycbcr_to_rgb.cpp
src/main/: main_linux.c  main_linux.cpp  main_macos.m  main_macos.mm
